# markql

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: ast.rs  lexer.rs  lib.rs  main.rs  output.rs
src/query/: executor.rs  mod.rs
tests/: integration_tests.rs
