[package]
name = "markql"
version = "0.1.0"
edition = "2021"
description = "Markdown Query Language - Query Markdown documents with CSS-like selectors"
license = "MIT"
repository = "https://github.com/EdgarOrtegaRamirez/markql"
keywords = ["markdown", "query", "parser", "cli", "ast"]
categories = ["command-line-utilities", "parsing", "text-processing"]
authors = ["EdgarOrtegaRamirez"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true
